# Motion_Capture

Fast_RCNN/: CMakeLists.txt  CMakeLists.txt1  Makefile  fast_rcnn  fast_rcnn.cpp  fast_rcnn.hpp  img_blob.cpp  img_blob.hpp  main.cpp  main.cpp1  run.sh
Fast_rcnn_train/: CMakeLists.txt  main.cpp
