cmake_minimum_required(VERSION 3.1.0)
set(CMAKE_CXX_STANDARD 11)
project( Fast_RCNN )
find_package(Caffe)
include_directories(${Caffe_INCLUDE_DIRS})
add_definitions(${Caffe_DEFINITIONS})
find_package( OpenCV REQUIRED )
add_executable( Fast_RCNN main.cpp fast_rcnn.cpp img_blob.cpp)
target_link_libraries( Fast_RCNN ${OpenCV_LIBS} ${Caffe_LIBRARIES})
